--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fbgraph": "^0.2.10",
     "github-api": "^0.7.0",
     "jade": "^1.3.1",
+    "jwt-simple": "^0.2.0",
     "less": "^1.7.1",
     "lodash": "^2.4.1",
     "lusca": "^1.0.0",
@@ -44,6 +45,7 @@
     "passport-local": "^1.0.0",
     "passport-oauth": "^1.0.0",
     "passport-twitter": "^1.0.2",
+    "q": "^1.0.1",
     "request": "^2.36.0",
     "twit": "^1.1.15",
     "uglify-js": "^2.4.14",
