--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "twit": "^1.1.15",
     "uglify-js": "^2.4.14",
     "validator": "^3.13.0",
-    "yui": "^3.17.1"
+    "yui": "^3.17.1",
+    "socket.io-client": "0.9.11"
   },
   "devDependencies": {
     "blessed": "0.0.33",
