--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codeyourwayin",
-  "version": "0.0.1",
+  "version": "0.0.1-2",
   "repository": {
     "type": "git",
     "url": "https://github.com/topcoderinc/codeyourwayin.git"
@@ -59,5 +59,9 @@
     "mocha": "^1.20.1",
     "multiline": "^0.3.4",
     "supertest": "^0.13.0"
+  },
+  "subdomain": "codeyourwayin",
+  "engines": {
+    "node": "0.10.x"
   }
 }
